--- a/ThreatEventProcessingService/.env
+++ b/ThreatEventProcessingService/.env
@@ -1,4 +1,4 @@
-POSTGRES_DSN=host=localhost user="add_username" password="add_password" dbname=teps port=5432 sslmode=disable
+POSTGRES_DSN=host=localhost user=username password=password dbname=teps port=5432 sslmode=disable
 REDIS_ADDR=localhost:6379
 FETCH_FEED_API=http://localhost:9090/events
 FETCH_API_TIME=* 1 * * *
